--- a/atr-owd-server/package.json
+++ b/atr-owd-server/package.json
@@ -9,7 +9,10 @@
   "author": "Raziel Carvajal Gomez",
   "license": "ISC",
   "dependencies": {
+    "debug": "^2.6.3",
     "express": "^4.15.2",
+    "its": "^1.0.2",
+    "shelljs": "^0.7.7",
     "socket.io": "^1.7.3"
   }
 }
