--- a/atr-owd-server/package.json
+++ b/atr-owd-server/package.json
@@ -13,6 +13,7 @@
     "express": "^4.15.2",
     "its": "^1.0.2",
     "shelljs": "^0.7.7",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "system-sleep": "^1.3.0"
   }
 }
