--- a/atr-owd-server/package.json
+++ b/atr-owd-server/package.json
@@ -13,7 +13,11 @@
     "express": "^4.15.2",
     "its": "^1.0.2",
     "shelljs": "^0.7.7",
+    "smoothie": "^1.27.0",
     "socket.io": "^1.7.3",
     "system-sleep": "^1.3.0"
+  },
+  "devDependencies": {
+    "browserify": "^14.1.0"
   }
 }
